# riesgo-engelamiento-v2

./: .gitattributes  .gitignore  README.md  pyproject.toml  skills-lock.json  wrfout_d01_2015-04-17_18_00_00_corte  wrfout_d01_2015-04-17_18_00_00_corte.nc
docs/: Mejoras_futuras.md  Notas_clase.md  Notas_desarrollo.md  Prompt_orchestration.md  findings_orchestration.md  fisica_review.md  session_2026-04-12_final_product_handoff.md  session_2026-04-12_handoff.md  session_2026-04-12_session_closeout.md
docs/decisions/: 0001-phase-1-reproducible-cli-and-validation.md  ADR-001-phase4-heuristic-severity.md  ADR-002-phase5-approximate-icing-risk.md  ADR-003-phase6-canonical-heuristic-severity.md  ADR-004-final-product-artifact-contract.md  ADR-005-final-product-vertical-band-selection.md  (+1 more)
plans/: aero-frost-ui.md  plan_aerofrost_revision_end_to_end.md  plan_continuacion_producto_final.md  plan_pulido_visual_producto_final.md  plan_refinamiento_visual_aerofrost.md  plan_riesgo_engelamiento.md  task_breakdown_aerofrost_revision_end_to_end.md  task_breakdown_continuacion_producto_final.md  task_breakdown_refinamiento_visual_aerofrost.md  task_mejora_estructural_visualizacion.md
specs/: PRD_continuacion_producto_final.md  PRD_perfil_ruta_engelamiento.md  PRD_riesgo_engelamiento.md  prd_estilo visual.md  spec_aerofrost_revision_end_to_end.md  spec_refinamiento_visual_aerofrost.md
src/backend/: main.py  (+1 more)
tests/: test_backend_api.py  test_dataset_validation.py  test_final_product.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_route_profile.py
(+42 files in other folders)
