[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "riesgo-engelamiento"
version = "0.1.0"
description = "Pipeline reproducible para validar y resumir una salida WRF de riesgo de engelamiento."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "xarray>=2025.1.0",
  "netCDF4>=1.7.2",
  "matplotlib>=3.10.0",
  "cartopy>=0.25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
riesgo-engelamiento = "riesgo_engelamiento.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/riesgo_engelamiento"]

[tool.pytest.ini_options]
testpaths = ["tests"]
